moved everything jpa-related to jpa module changed @Component to @Named in Spring-JEE agnostic module and @Autowired to @Inject

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>meeting-jpa</module>
         <module>meeting-spring</module>
+        <module>meeting-spring-integration-testing</module>
     </modules>
 
     <dependencyManagement>
