--- a/meeting-arquillian-web-integration-testing/pom.xml
+++ b/meeting-arquillian-web-integration-testing/pom.xml
@@ -9,11 +9,38 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>meeting-arquillian-integration-testing</artifactId>
+    <artifactId>meeting-arquillian-web-integration-testing</artifactId>
 
     <properties>
         <browser>phantomjs</browser>
     </properties>
+
+    <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
+        <plugins>
+            <plugin>
+                <groupId>org.jboss.as.plugins</groupId>
+                <artifactId>jboss-as-maven-plugin</artifactId>
+                <version>7.6.Final</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jboss-home>${jboss-home}</jboss-home>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -33,6 +60,10 @@
         <dependency>
             <groupId>be.ordina.demo</groupId>
             <artifactId>meeting-jee-ejb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>be.ordina.demo</groupId>
+            <artifactId>meeting-jee-rest</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -60,54 +91,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.graphene</groupId>
+            <artifactId>graphene-webdriver</artifactId>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-angularjs-graphene-impl</artifactId>
+            <version>1.2.0.Beta1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>arquillian-glassfish-embedded</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.jboss.arquillian.container</groupId>
-                    <artifactId>arquillian-glassfish-embedded-3.1</artifactId>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.glassfish.main.extras</groupId>
-                    <artifactId>glassfish-embedded-all</artifactId>
-                    <scope>provided</scope>
-                </dependency>
-            </dependencies>
-            <build>
-                <testResources>
-                    <testResource>
-                        <directory>src/test/resources</directory>
-                    </testResource>
-                    <testResource>
-                        <directory>src/test/resources-glassfish-embedded</directory>
-                    </testResource>
-                </testResources>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.12</version>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <java.util.logging.config.file>
-                                    ${project.build.testOutputDirectory}/logging.properties
-                                </java.util.logging.config.file>
-                                <derby.stream.error.file>
-                                    ${project.build.directory}/derby.log
-                                </derby.stream.error.file>
-                            </systemPropertyVariables>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
         <profile>
             <id>arquillian-jbossas-managed</id>
             <dependencies>
@@ -141,6 +138,9 @@
         </profile>
         <profile>
             <id>arquillian-jbossas-remote</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.jboss.spec</groupId>
