--- a/meeting-jee-ejb/pom.xml
+++ b/meeting-jee-ejb/pom.xml
@@ -9,38 +9,33 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>meeting-spring-integration-test</artifactId>
+    <artifactId>meeting-jee-ejb</artifactId>
 
     <dependencies>
+        <!-- meeting dependencies -->
         <dependency>
             <groupId>be.ordina.demo</groupId>
-            <artifactId>meeting-spring</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.hamcrest</groupId>
-                    <artifactId>hamcrest-library</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>meeting-jpa</artifactId>
+        </dependency>
+        <!-- provided dependencies -->
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
         </dependency>
         <dependency>
             <groupId>be.ordina.demo</groupId>
             <artifactId>meeting-jpa</artifactId>
             <classifier>tests</classifier>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-        </dependency>
     </dependencies>
-
 
 </project>
