--- a/meeting-spring/pom.xml
+++ b/meeting-spring/pom.xml
@@ -13,11 +13,12 @@
     <artifactId>meeting-spring</artifactId>
 
     <dependencies>
+        <!-- meeting dependencies -->
         <dependency>
             <groupId>be.ordina.demo</groupId>
             <artifactId>meeting-jpa</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--Spring boot dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -35,23 +36,24 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>be.ordina.demo</groupId>
-            <artifactId>meeting-jpa</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <classifier>tests</classifier>
-        </dependency>
+        <!-- third-party dependencies -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <!-- test dependencies -->
+        <dependency>
+            <groupId>be.ordina.demo</groupId>
+            <artifactId>meeting-jpa</artifactId>
+            <classifier>tests</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 
