--- a/meeting-jee-ejb/pom.xml
+++ b/meeting-jee-ejb/pom.xml
@@ -2,43 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>be.ordina.demo</groupId>
         <artifactId>integration-test-demo</artifactId>
+        <groupId>be.ordina.demo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>meeting-jpa</artifactId>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+    <artifactId>meeting-jee-ejb</artifactId>
 
     <dependencies>
+        <!-- meeting dependencies -->
+        <dependency>
+            <groupId>be.ordina.demo</groupId>
+            <artifactId>meeting-jpa</artifactId>
+        </dependency>
         <!-- provided dependencies -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-        </dependency>
-        <!-- third-party dependencies -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
         </dependency>
         <!-- test dependencies -->
         <dependency>
@@ -50,8 +32,9 @@
             <artifactId>mockito-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava-testlib</artifactId>
+            <groupId>be.ordina.demo</groupId>
+            <artifactId>meeting-jpa</artifactId>
+            <classifier>tests</classifier>
         </dependency>
     </dependencies>
 
