--- a/meeting-jee-rest/pom.xml
+++ b/meeting-jee-rest/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>be.ordina.demo</groupId>
+            <artifactId>meeting-jpa</artifactId>
+            <classifier>tests</classifier>
+        </dependency>
     </dependencies>
 
 </project>
