--- a/meeting-web/package.json
+++ b/meeting-web/package.json
@@ -1,10 +1,10 @@
 {
   "version": "0.0.0",
   "private": true,
-  "name": "angular-phonecat",
-  "description": "A tutorial application for AngularJS",
-  "repository": "https://github.com/angular/angular-phonecat",
-  "license": "MIT",
+  "name": "meeting-web",
+  "description": "The angular part of the meeting organizing web-app",
+  "repository": "",
+  "license": "",
   "devDependencies": {
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
