--- a/meeting-spring-integration-testing/pom.xml
+++ b/meeting-spring-integration-testing/pom.xml
@@ -11,6 +11,23 @@
 
     <artifactId>meeting-spring-integration-testing</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>be.ordina.demo</groupId>
