--- a/meeting-spring/pom.xml
+++ b/meeting-spring/pom.xml
@@ -12,6 +12,19 @@
 
     <artifactId>meeting-spring</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- meeting dependencies -->
         <dependency>
